# cargo-docserve

./: Cargo.toml  README.md
src/: doc.rs  lib.rs  main.rs  serve.rs  server.rs
templates/: index.html
testcrates/nodoc/: Cargo.toml
testcrates/normal/: Cargo.toml
testcrates/normal/src/: lib.rs
