[package]
name = "cargo-docserve"
version = "0.0.1"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/cargo-docserve.git"

[badges]
maintenance = { status = "experimental" }

[workspace]
members = [
  "testcrates/normal",
  "testcrates/nodoc",
]

[dependencies]
cargo = "0.30.0"
clap-verbosity-flag = "0.2.0"
failure = "0.1.2"
log = "0.4.4"
notify = "4.0.4"
pretty_env_logger = "0.2.4"
structopt = "0.2.10"
hyper = "0.12.11"
http = "0.1.10"
futures = "0.1.23"
tokio = "0.1.7"
mime_guess = "2.0.0-alpha.6"
askama = "0.7.1"

[build-dependencies]
askama = "0.7.1"
